fixed scrollbars and notification icons

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -87,6 +87,8 @@ button {
 }
 
 .light {
+  scrollbar-color: rgba(0, 0, 0, 0.3) transparent;
+
   &::-webkit-scrollbar {
     width: 4px;
     height: 4px;
@@ -109,21 +111,23 @@ button {
 }
 
 .dark {
+  scrollbar-color: color-mix(in srgb, var(--sheet-card), #fff 8%) transparent;
+
   &::-webkit-scrollbar {
     width: 4px;
     height: 4px;
   }
 
   &::-webkit-scrollbar-track {
-    background-color: color-mix(in srgb,var(--sheet-card),#000 10%);
+    background-color: color-mix(in srgb, var(--sheet-card), #000 10%);
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: color-mix(in srgb,var(--sheet-card),#fff 8%);
+    background-color: color-mix(in srgb, var(--sheet-card), #fff 8%);
     border-radius: 10px;
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background: color-mix(in srgb,var(--sheet-card),#fff 12%);
+    background: color-mix(in srgb, var(--sheet-card), #fff 12%);
   }
 }
